# rust_diesel

./: .env  .gitignore  Cargo.toml  README.md
migrations/2023-05-01-220853_create_students_table/: up.sql
src/: main.rs  models.rs  schema.rs
