[package]
name = "rust_diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.0.0"
chrono = { version = "0.4.24", features = ["serde"] }
dotenvy = "0.15.7"